--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<div class="container d-flex justify-content-center align-items-center">
+  <div class="form-wrapper text-center">
+    <h2 class>Login</h2>
+  </div>
+</div>
