--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,16 +1,16 @@
-<div class="container d-flex justify-content-center align-items-center">
+
+<div class="container-wrapper container d-flex justify-content-center align-items-center">
   <div class="form-wrapper text-center">
     <h2 class="text-center">Login</h2>
-    <form [formGroup]="loginForm" (submit)="submit()" nonvalidate>
-      <div class="form-Group">
-        <input type="email" class="from-control" id="email-input" placeholder="Enter Email" formControlName="email">
+    <form [formGroup]="loginForm" (submit)="submit()" novalidate>
+      <div class="form-group">
+        <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
       </div>
-
-      <div class="form-Group">
-        <input type="password" class="from-control" id="password-input" placeholder="Enter password" formControlName="password">
+      <div class="form-group">
+        <input type="password" class="form-control" id="password-input" placeholder="Password" formControlName="password">
       </div>
       <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Submit</button>
-      <small><a routerLink="/signup"> Need an Account?</a></small>
     </form>
+    <small><a routerLink="/signup">Need an Account?</a></small>
   </div>
 </div>
