--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,16 +1,16 @@
 
 <div class="container-wrapper container d-flex justify-content-center align-items-center">
   <div class="form-wrapper text-center">
-    <h2 class="text-center">Login</h2>
-    <form [formGroup]="loginForm" (submit)="submit()" novalidate>
+    <h2 class="text-center">signup</h2>
+    <form [formGroup]="signupForm" (submit)="submit()" novalidate>
       <div class="form-group">
         <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
       </div>
       <div class="form-group">
         <input type="password" class="form-control" id="password-input" placeholder="Password" formControlName="password">
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Submit</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Submit</button>
     </form>
-    <small><a routerLink="/signup">Need an Account?</a></small>
+    <small><a routerLink="/login">Already have an Account?</a></small>
   </div>
 </div>
