--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -4,6 +4,12 @@
     <h2 class="text-center">signup</h2>
     <form [formGroup]="signupForm" (submit)="submit()" novalidate>
       <div class="form-group">
+          <input type="text" class="form-control" id="first-name-input" placeholder="First Name" formControlName="firstName">
+      </div>
+      <div class="form-group">
+          <input type="text" class="form-control" id="last-name-input" placeholder="Last Name" formControlName="lastName">
+      </div>
+      <div class="form-group">
         <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
       </div>
       <div class="form-group">
