--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -3,11 +3,13 @@
   <div class="form-wrapper text-center">
     <h2 class="text-center">signup</h2>
     <form [formGroup]="signupForm" (submit)="submit()" novalidate>
-      <div class="form-group">
-          <input type="text" class="form-control" id="first-name-input" placeholder="First Name" formControlName="firstName">
-      </div>
-      <div class="form-group">
-          <input type="text" class="form-control" id="last-name-input" placeholder="Last Name" formControlName="lastName">
+      <div class="name-wrapper d-flex">
+          <div class="form-group first-name">
+              <input type="text" class="form-control" id="first-name-input" placeholder="First Name" formControlName="firstName">
+          </div>
+          <div class="form-group last-name">
+              <input type="text" class="form-control" id="last-name-input" placeholder="Last Name" formControlName="lastName">
+          </div>
       </div>
       <div class="form-group">
         <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
