--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
-
+  <div class="container">
+    <span class="navbar brand">
+      Chatterbox
+    </span>
+  </div>
 </nav>
