--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
   <div class="container">
-    <span class="navbar brand">
-      Chatterbox
-    </span>
+    <span class="navbar brand">Chatterbox</span>
+    <div class="page-links">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLInk="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
+        </li>
+        <li class="nav-item">
+          <a routerLInk="/login" routerLinkActive="active" class="nav-link">Login</a>
+        </li>
+      </ul>
+    </div>
+
   </div>
 </nav>
