--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
     <div class="page-links">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a routerLInk="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
+          <a routerLink="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
         </li>
         <li class="nav-item">
-          <a routerLInk="/login" routerLinkActive="active" class="nav-link">Login</a>
+          <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
         </li>
       </ul>
     </div>
