--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,14 @@ body{
   color: $secondary;
 }
 
+.container {
+  height: calc(100vh - 80px) !important;
+}
+
+.navbar {
+  height: 80px;
+}
+
 button {
   width: 100%
 }
