modified scss file

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,17 +2,16 @@
 @import 'variables';
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
-
-body{
-  color: $secondary;
+body {
+    color: $secondary;
 }
 
-.container {
-  height: calc(100vh - 80px) !important;
+.container-wrapper {
+    height: calc(100vh - 80px) !important;
 }
 
 .navbar {
-  height: 80px;
+    height: 80px;
 }
 
 button {
