--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,15 +2,26 @@
   <div class="container">
     <span class="navbar brand">Chatterbox</span>
     <div class="page-links">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" *ngIf="true else loggedOut">
         <li class="nav-item">
           <a routerLink="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
+          <a routerLink="/login" routerLinkActive="active" class="nav-link">Logout</a>
         </li>
       </ul>
     </div>
 
   </div>
 </nav>
+
+<ng-template #loggedOut>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="/signup"  class="nav-link">Sign Up</a>
+    </li>
+  </ul>
+</ng-template>
