--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <a routerLink="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/login" routerLinkActive="active" class="nav-link">Logout</a>
+          <a routerLink="/login" class="nav-link">Logout</a>
         </li>
       </ul>
     </div>
