ngIf to false testing

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <span class="navbar brand">Chatterbox</span>
     <div class="page-links">
-      <ul class="navbar-nav" *ngIf="true else loggedOut">
+      <ul class="navbar-nav" *ngIf="false else loggedOut">
         <li class="nav-item">
           <a routerLink="/chat" routerLinkActive="active" class="nav-link">Chat Rooms</a>
         </li>
