--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/signup"  class="nav-link">Sign Up</a>
+      <a routerLink="/signup"  routerLinkActive="active" class="nav-link">Sign Up</a>
     </li>
   </ul>
 </ng-template>
