--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<p>
-  chat works!
-</p>
+<div class="container d-flex">
+  <app-chatroom-list class="w-25"></app-chatroom-list>
+  <app-chatroom-window class="w-75"></app-chatroom-window>
+</div>
