ng container to render loop

--- a/src/app/pages/chat/components/chatroom-list/chatroom-list.component.html
+++ b/src/app/pages/chat/components/chatroom-list/chatroom-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  chatroom-list works!
-</p>
+<div class="h-100 d-flex flex-column chatroom-list">
+  <ng-container *ngFor>
+
+  </ng-container>
+</div>
