--- a/src/app/pages/chat/components/chatroom-list/chatroom-list.component.html
+++ b/src/app/pages/chat/components/chatroom-list/chatroom-list.component.html
@@ -1,5 +1,5 @@
 <div class="h-100 d-flex flex-column chatroom-list">
-  <ng-container *ngFor>
+  <ng-container *ngFor=" let chatRoom of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,16,16,17]">
 
   </ng-container>
 </div>
