--- a/src/app/pages/chat/components/chatroom-list/chatroom-list.component.scss
+++ b/src/app/pages/chat/components/chatroom-list/chatroom-list.component.scss
@@ -1,5 +1,12 @@
-@import "../../../../../styles/variables"
+@import "../../../../../styles/variables";
 
 .chatroom-list{
+
+  border-right: 2px solid $light-grey;
+
+  .chatroom-list-item{
+    border-bottom: 1px solid $light-grey;
+    padding: 1em;
+  }
 
 }
