--- a/src/app/pages/chat/components/chatroom-window/chatroom-window.component.html
+++ b/src/app/pages/chat/components/chatroom-window/chatroom-window.component.html
@@ -5,5 +5,6 @@
             <app-chat-message [message]="message"></app-chat-message>
         </ng-container>
     </div>
+    <app-chat-input></app-chat-input>
 
 </div>
